--- a/src/main/resources/static/resources/css/index.css
+++ b/src/main/resources/static/resources/css/index.css
@@ -450,6 +450,20 @@ a:hover{
 @media (max-width: 992px) {
 }
 
+@media (max-width: 576px) {
+	.main-container-layout:not(.rtl) {
+	    margin-left: 0rem !important;
+	}
+	.main-container-layout:not(.rtl) .navbar-main{
+		margin: 0 !important;
+	    border-top-left-radius: 0 !important;
+	    border-top-right-radius: 0 !important;
+	}
+	.main-container-wk:not(.rtl) {
+		margin-left: 0 !important;
+		padding: 1.5rem 0 1.5rem 0;
+	}}
+
 /* // Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) { 
 }
