--- a/src/main/resources/templates/dashboard/comparativo_ventas_streaming.html
+++ b/src/main/resources/templates/dashboard/comparativo_ventas_streaming.html
@@ -34,10 +34,10 @@
 
 							<!-- HTML -->
 							<div class="row">
-								<div class="col-8">
+								<div class="col-xxl-9 col-xl-8 col-lg-8 col-md-12 col-sm-12 col-12">
 									<div id="chartdiv"></div>
 								</div>
-								<div class="col-4 justify-content-center text-center px-5">
+								<div class="col-xxl-3 col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12 text-center px-5">
 									<br />
 									<h3 class="h5">Selecciona fechas para comparar</h3>
 									<div class="input-group">
@@ -118,10 +118,10 @@
 
 							<!-- HTML -->
 							<div class="row">
-								<div class="col-8">
+								<div class="col-xxl-9 col-xl-8 col-lg-8 col-md-12 col-sm-12 col-12">
 									<div id="controlChartdiv"></div>
 								</div>
-								<div class="col-4 justify-content-center text-center px-5">
+								<div class="col-xxl-3 col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12 text-center px-5">
 									<br />
 									<h3 class="h5">Selecciona fechas para comparar</h3>
 									<div class="input-group">
