--- a/src/main/resources/templates/catalogos/conf_msjs.html
+++ b/src/main/resources/templates/catalogos/conf_msjs.html
@@ -20,7 +20,7 @@
 							<i class="fa-regular fa-rectangle-list card_header_icon text-primary"></i>
 							<h5 class="text-pr text-primary">C&aacute;talogo Configuraci&oacute;n de Mensajes</h5>
 						</div>
-						<div class="card-body px-0 pt-0 pb-2">
+						<div class="card-body p-4">
 							<div class="row d-flex justify-content-center">
 								<div class="border box-info-st border-left-success p-3 m-3 col-1 text-center">
 									<span class="text-xg font-weight-bold text">VALIDACI&Oacute;N</span>
