--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -36,34 +36,18 @@
 			<hr class="horizontal dark mt-0">
 			<div class="collapse navbar-collapse  w-auto "
 				id="sidenav-collapse-main">
+				<!-- MENU PRINCIPAL INI -->
+				<ul class="navbar-nav" th:each="m: ${menu}">
+					<li class="nav-item"><a class="nav-link" th:href="@{/}+${m.vista}" th:id="${m.id}">
+							<div
+								class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
+								<i class="ni fa-solid text-secondary fs-4" th:classappend="${m.icono}"></i>
+							</div> <span class="nav-link-text ms-1 tncr s2 text-start text-wrap" th:text="${m.descripcion}"></span>
+					</a></li>
+				</ul>
+				<!-- MENU PRINCIPAL FIN -->
+				<!-- MENU CATALOGOS INI -->
 				<ul class="navbar-nav">
-					<li class="nav-item"><a class="nav-link" th:href="@{/comparativo_ventas_streaming}" id="salud_sistema">
-							<div
-								class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-								<i class="ni fa-solid fa-desktop text-secondary fs-4"></i>
-							</div> <span class="nav-link-text ms-1 tncr s2">Salud del sistema</span>
-					</a></li>
-					<li class="nav-item"><a class="nav-link" th:href="@{/comparativo_ventas_streaming}" id="contrataciones">
-							<div
-								class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-								<i class="ni fa-solid fa-file-contract text-secondary fs-4"></i>
-							</div> <span class="nav-link-text ms-1 tncr s2">Contrataciones
-								vs <br /> Aprovisonamientos
-						</span>
-					</a></li>
-					<li class="nav-item"><a class="nav-link" th:href="@{/comparativo_ventas_streaming}" id="ventas">
-							<div
-								class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-								<i class="ni fa-solid fa-clipboard-check text-secondary fs-4"></i>
-							</div> <span class="nav-link-text ms-1 tncr s2">Ventas</span>
-					</a></li>
-					<li class="nav-item"><a class="nav-link " href="#" id="visor_soporte">
-							<div
-								class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-								<i class="ni fa-solid fa-life-ring text-secondary fs-4"></i>
-							</div> <span class="nav-link-text ms-1 tncr s2">Visor
-								de soporte</span>
-					</a></li>
 					<li class="nav-item dropend">
 						<a class="nav-link dropdown-toggle" data-bs-toggle="collapse"
 						href="#multiCollapseExample1" role="button" aria-expanded="false"
@@ -75,42 +59,17 @@
 							<i class="bi bi-chevron-down ms-auto"></i>
 					</a>
 						<div class="collapse multi-collapse pt-3" id="multiCollapseExample1">
-							<ul id="list-group">
+							<ul id="list-group" th:each="m: ${catalogos}">
 								<li class="list-group-item">
-									<a class="nav-link fs-6" th:href="@{/etapas}" id="etapas"> 
-										<span>Etapas</span>
-									</a>
-								</li>
-								<li class="list-group-item">
-									<a class="nav-link fs-6" th:href="@{/errores}" id="errores"> 
-										<span>Errores</span>
-									</a>
-								</li>
-								<li class="list-group-item">
-									<a class="nav-link fs-6" th:href="@{/conf_msjs}" id="conf_msn"> 
-										<span>Configuración de Mensajes</span>
-									</a>
-								</li>
-								<li class="list-group-item">
-									<a class="nav-link fs-6" th:href="@{/plataformas}" id="plataformas"> 
-										<span>Plataformas</span>
-									</a>
-								</li>
-								<li class="list-group-item">
-									<a class="nav-link fs-6" th:href="@{/productos}" id="productos"> 
-										<span>Productos</span>
+									<a class="nav-link fs-6" th:href="@{/}+${m.vista}" th:id="${m.id}"> 
+										<span th:text="${m.descripcion}"></span>
 									</a>
 								</li>
 							</ul>
 						</div>
 					</li>
-					<li class="nav-item"><a class="nav-link " href="#" id="visor_soporte2">
-							<div
-								class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-								<i class="ni fa-solid fa-life-ring text-secondary fs-4"></i>
-							</div> <span class="nav-link-text ms-1 tncr s2 text-secondary">Visor de soporte</span>
-					</a></li>
 				</ul>
+				<!-- MENU CATALOGOS FIN -->
 			</div>
 		</aside>
 
@@ -125,55 +84,12 @@
 				<div class="container-fluid py-1 px-3 line-bottom-whites">
 					<i class="fa-solid fa-bars me-3 fs-3 icon-nav-menu-burguer" style="cursor: pointer;"></i>
 					<nav aria-label="breadcrumb">
-						<h6 class="font-weight-bolder text-back mb-0 fs-4">M&oacute;dulo de Aprovisionamiento de Terceros</h6>
+						<h6 class="font-weight-bolder text-back mb-0 fs-4">M&oacute;dulo de Aprovisionamiento de Plataformas de Streaming</h6>
 					</nav>
 					<div class="collapse navbar-collapse mt-sm-0 mt-2 me-md-0 me-sm-4"
 						id="navbar">
 						<div class="ms-md-auto pe-md-3 d-flex align-items-center"></div>
 						<ul class="navbar-nav  justify-content-end">
-							<li class="nav-item dropdown pe-2 d-flex align-items-center">
-								<a href="javascript:;" class="nav-link text-nav-top fs-5 p-0"
-								id="dropdownMenuButton" data-bs-toggle="dropdown"
-								aria-expanded="false"> <i class="fa fa-bell cursor-pointer"></i>
-							</a>
-								<ul class="dropdown-menu  dropdown-menu-end  px-2 py-3 me-sm-n4" style="z-index: 10;"
-									aria-labelledby="dropdownMenuButton">
-									<li class="mb-2"><a class="dropdown-item border-radius-md"
-										href="javascript:;">
-											<div class="d-flex py-1">
-												<div class="my-auto">
-													<i class="fa-solid fa-circle me-3"></i>
-												</div>
-												<div class="d-flex flex-column justify-content-center">
-													<h6 class="text-sg font-weight-normal mb-1">
-														<span class="font-weight-bold">Nueva Notificación</span>
-														del sistema
-													</h6>
-													<p class="text-xg text-secondary mb-0">
-														<i class="fa fa-clock me-1"></i> hace 13 minutos
-													</p>
-												</div>
-											</div>
-									</a></li>
-									<li class="mb-2"><a class="dropdown-item border-radius-md"
-										href="javascript:;">
-											<div class="d-flex py-1">
-												<div class="my-auto">
-													<i class="fa-solid fa-circle me-3"></i>
-												</div>
-												<div class="d-flex flex-column justify-content-center">
-													<h6 class="text-sg font-weight-normal mb-1">
-														<span class="font-weight-bold">Nueva Notificación</span>
-														del sistema
-													</h6>
-													<p class="text-xg text-secondary mb-0">
-														<i class="fa fa-clock me-1"></i> hace 30 minutos
-													</p>
-												</div>
-											</div>
-									</a></li>
-								</ul>
-							</li>
 							<li class="nav-item d-flex px-3 align-items-center"><a id="cerrar_sesion"
 								href="login"
 								class="nav-link text-nav-top font-weight-bold px-0 fs-5"> <i
